SP Manager encoder fix for JDK9